versioned_docs/version-2.13/reference/targets/python_test_utils.mdx
---
title: python_test_utils
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `python_source` target for each file in the `sources` field.

This target generator is intended for test utility files like `conftest.py` or `my_test_utils.py`. Technically, it generates `python_source` targets in the exact same way as the `python_sources` target generator does, only that the `sources` field has a different default. So it is valid to use `python_sources` instead. However, this target can be helpful to better model your code by keeping separate test support files vs. production files.

Backend: <span className="color--primary">`pants.backend.python`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcescode}
</div>

## `sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('conftest.py', 'test_*.pyi', '*_test.pyi', 'tests.pyi')`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['conftest.py', 'test_*.pyi', '*_test.pyi', 'tests.pyi']`

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoverridescode}
</div>

## `overrides`

<Field
    type_repr={`Dict[Union[str, Tuple[str, ...]], Dict[str, Any]] | None`}
    default_repr={`None`}
>

Override the field values for generated `{generated_target_name}` targets.

Expects a dictionary of relative file paths and globs to a dictionary for the overrides. You may either use a string for a single path / glob, or a string tuple for multiple paths / globs. Each override is a dictionary of field names to the overridden value.

For example:
overrides=&#123;
&#x22;foo.py&#x22;: &#123;&#x22;skip_pylint&#x22;: True]&#125;,
&#x22;bar.py&#x22;: &#123;&#x22;skip_flake8&#x22;: True]&#125;,
(&#x22;foo.py&#x22;, &#x22;bar.py&#x22;): &#123;&#x22;tags&#x22;: [&#x22;linter_disabled&#x22;]&#125;,
&#125;&#x22;

File paths and globs are relative to the BUILD file&#x27;s directory. Every overridden file is validated to belong to this target&#x27;s `sources` field.

If you&#x27;d like to override a field&#x27;s value for every `python_source` target generated by this target, change the field directly on this target rather than using the `overrides` field.

You can specify the same file name in multiple keys, so long as you don&#x27;t override the same field more than one time for the file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_autoflakecode}
</div>

## `skip_autoflake`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.experimental.python.lint.autoflake"
>

If true, don&#x27;t run Autoflake on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_pyupgradecode}
</div>

## `skip_pyupgrade`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.experimental.python.lint.pyupgrade"
>

If true, don&#x27;t run pyupgrade on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_banditcode}
</div>

## `skip_bandit`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.bandit"
>

If true, don&#x27;t run Bandit on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_blackcode}
</div>

## `skip_black`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.black"
>

If true, don&#x27;t run Black on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_docformattercode}
</div>

## `skip_docformatter`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.docformatter"
>

If true, don&#x27;t run Docformatter on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_flake8code}
</div>

## `skip_flake8`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.flake8"
>

If true, don&#x27;t run Flake8 on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_isortcode}
</div>

## `skip_isort`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.isort"
>

If true, don&#x27;t run isort on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_pylintcode}
</div>

## `skip_pylint`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.pylint"
>

If true, don&#x27;t run Pylint on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_yapfcode}
</div>

## `skip_yapf`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.lint.yapf"
>

If true, don&#x27;t run yapf on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_mypycode}
</div>

## `skip_mypy`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.python.typecheck.mypy"
>

If true, don&#x27;t run MyPy on this target&#x27;s code.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderesolvecode}
</div>

## `resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The resolve from `[python].resolves` to use.

If not defined, will default to `[python].default_resolve`.

All dependencies must share the same value for their `resolve` field.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderun_goal_use_sandboxcode}
</div>

## `run_goal_use_sandbox`

<Field
    type_repr={`bool | None`}
    default_repr={`None`}
>

Whether to use a sandbox when `run`ning this target. Defaults to `[python].run_goal_use_sandbox`.

If true, runs of this target with the `run` goal will copy the needed first-party sources into a temporary sandbox and run from there.

If false, runs of this target with the `run` goal will use the in-repo sources directly.

The former mode is more hermetic, and is closer to building and running the source as it were packaged in a `pex_binary`. Additionally, it may be necessary if your sources depend transitively on &#x22;generated&#x22; files which will be materialized in the sandbox in a source root, but are not in-repo.

The latter mode is similar to creating, activating, and using a virtual environment when running your files. It may also be necessary if the source being run writes files into the repo and computes their location relative to the executed files. Django&#x27;s makemigrations command is an example of such a process.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.13/docs/targets#target-addresses and https://www.pantsbuild.org/v2.13/docs/targets#target-generation for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir:` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinterpreter_constraintscode}
</div>

## `interpreter_constraints`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. `CPython==2.7.*` or `CPython>=3.6,<4`. You can leave off `CPython` as a shorthand, e.g. `>=2.7` will be expanded to `CPython>=2.7`.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python].interpreter_constraints`.

See https://www.pantsbuild.org/v2.13/docs/python-interpreter-compatibility for how these interpreter constraints are merged with the constraints of dependencies.

</Field>

</span>
